--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
 	<title>Document</title>
 </head>
 <body>
-	
+ <nav class="top-navigation">
+        <div class="content"></div>
+    </nav>
+    <div class="content">
+    <img class="logo" src="images/karma-logo copy.svg" alt="Logo Image" width="26px">
+   <ul class="links">
+   <li>Meet Karma</li>
+   <li>How It works</li>
+   <li>Store</li>
+   <li>Blog</li>
+   <li>Help</li>
+   <li>Log in</li>
+   </ul>
+</div>
+</div>
+</div>
+</div>
+</div>
 </body>
 </html>
